src/style/style.css
:root {
    --grass: #9bcc50;
    --poison: #b97fc9;
    --fire: #fd7d24;
    --water: #4592c4;
    --bug: #729f3f;
    --flying: #0fd6b7;
    --normal: #a4acaf;
    --electric: #eed535;
    --ground: #6a3115;
    --fairy: #fdb9e9;
    --fighting: #e15600;
    --psychic: #da43bc;
    --rock: #a38c21;
    --steel: #659294;
    --ice: #50c3e7;
    --ghost: #7b62a3;
    --dragon: #f1826e;
    --dark: #6d00da;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}
html {
    font-size: 62.5%;
    font-family: 'Gantari', sans-serif;
}
a {
    text-decoration: none;
}
body {
    position: relative;
}

.header-pokedex {
    position: absolute;
    top: 0;
    text-align: center;
    width: 100%;
    z-index: 1;
}
.pokeapi-img {
    margin-top: 15px;
    width: 130px;
}
.pokemon-main-name {
    color: white;
    padding: 0 5px;
    font-size: 3rem;
    text-transform: capitalize;
    margin-top: 8px;
}
.pokemon-main-id {
    font-size: 1.6rem;
    color: #e4e3e3;
    font-weight: bold;
}
.searcher-icon {
    display: block;
    position: absolute;
    width: 25px;
    height: 25px;
    top: 27px;
    right: 10%;
    cursor: pointer;
    -webkit-tap-highlight-color: rgba(255, 0, 0, 0.311);
}
.searcher-container {
    display: none;
    position: absolute;
    width: 100%;
    height: auto;
    top: 0;
    bottom: 0;
    z-index: 1;
    opacity: 0;
    animation-name: modal-on;
    animation-duration: 0.5s;
    animation-iteration-count: 1;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
}
@keyframes modal-on {
    from {
        opacity: 0;
    } to {
        opacity: 1;
    }
}
@keyframes modal-off {
    from {
        opacity: 1;
    } to {
        opacity: 0;
    }
}
.searcher-background {
    background-color: #ff390c53;
    height: 100%;
}
.searcher-background__close-modal-div {
    width: 100%;
    height: calc(100% - 75px);
}
.input-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 75px;
    background-color: #c42b09;
}
.cross-icon {
    position: absolute;
    width: 23px;
    height: 23px;
    top: 27px;
    left: 5%;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
}
.cross-icon:active {
    fill: #a4a4a4;
}
.input-container__searcher {
    height: 38px;
    width: 170px;
    outline: none;
    border: none;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    padding-left: 10px;
    font-family: 'Gantari';
    font-weight: bold;
    font-size: 1.8rem;
}
.input-container__button {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 38px;
    width: 40px;
    border: none;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
    background-color: #e4e3e3;
}
.input-container__button:active {
    background-color: #a4a4a4;
}
.search-icon {
    width: 20px;
    height: 20px;
}

.main-pokedex__pokemon-info {
    position: relative;
}
.pokemon-info__background-pokedex {
    background-color: #ff380c;
    height: max-content;
}
.pokemon-info__border {
    display: flex;
    flex-direction: column;
    justify-content: end;
    width: 100%;
    max-width: 1020px;
    height: 785px;
    margin: 0 auto;
    border: 6px solid #ff380c;
}
.pokemon-info__container {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    width: 100%;
    height: 765px;
    overflow: hidden;
    z-index: 0;
}
.pokemon-info__container-imgs {
    display: flex;
    flex-direction: column;
    align-items: center;
    position: absolute;
    top: 18%;
    z-index: 1;
}
.pokemon-info__pokemon-img {
    width: 250px;
    z-index: 1;
}
.pokemon-info__container-imgs span {
    position: absolute;
    width: 180px;
    height: 22px;
    bottom: 12px;
    border-radius: 50%;
    background-color: #f4785d;
    z-index: 0;
}
.pokemon-info__circle {
    position: absolute;
    background-color: #ff8268;
    width: 1000px;
    height: 426px;
    border-top-left-radius: 50%;
    border-top-right-radius: 50%;
    bottom: 0;
}
.pokemon-info__description {
    position: absolute;
    width: 100%;
    top: 51%;
    z-index: 1;
}
.pokemon-info__description__types {
    display: flex;
    justify-content: center;
}
.pokemon-main-type {
    display: inline-block;
    padding: 2px 6px 4px;
    margin: 5px 4px 10px;
    border: 2px solid;
    border-radius: 5px;
    font-size: 1.6rem;
    color: white;
}
.pokemon-info__description__grid {
    display: grid;
    grid-template-columns: repeat(3, minmax(80px, 12%));
    grid-template-rows: 80px 80px auto;
    justify-content: center;
}
.box-stats {
    display: flex;
    align-items: center;
    flex-direction: column;
    margin: 7px;
    background-color: white;
    border-radius: 10px;
    font-size: 1.4rem;
    -webkit-box-shadow: 5px 5px 15px -10px rgba(0,0,0,0.7);
    box-shadow: 5px 5px 15px -10px rgba(0,0,0,0.7);
}
.box-stats__image {
    display: inline-block;
    width: 24px;
    height: 24px;
    margin-top: 5px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
}
.box-stats__image--hp-image {
    background-image: url("../../assets/hp.png");
}
.box-stats__image--attack-image {
    background-image: url("../../assets/attack.png");
}
.box-stats__image--defense-image {
    background-image: url("../../assets/defense.png");
}
.box-stats__image--sp-attack-image {
    background-image: url("../../assets/sp-attack.png");
}
.box-stats__image--sp-defense-image {
    background-image: url("../../assets/sp-defense.png");
}
.box-stats__image--speed-image {
    background-image: url("../../assets/speed.png");
}
.box-stats__image + span {
    font-size: 1rem;
    color: gray;
}
.stat-number {
    font-size: 1.7rem;
    font-weight: bold;
}
.pokemon-box-info {
    grid-row: 3/4;
    grid-column: 1/4;
    background-color: white;
    border-radius: 10px;
    margin: 2px 7px;
    padding: 10px;
    font-size: 1.4rem;
    font-style: italic;
    -webkit-box-shadow: 5px 5px 15px -10px rgba(0,0,0,0.7);
    box-shadow: 5px 5px 15px -10px rgba(0,0,0,0.7);
}
.pokemon-box-info__about {
    display: block;
    font-size: 1.6rem;
    font-weight: bold;
    padding-bottom: 4px;
    text-align: center;
    font-style: normal;
}

.pokeball-random {
    position: fixed;
    width: 70px;
    height: 70px;
    bottom: 30px;
    right: 12px;
    z-index: 1;
    border-radius: 50%;
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;

    transition: all 0.5s;
    animation-name: pokeball;
    animation-duration: 6s;
    animation-iteration-count: infinite;
}
.pokeball-random:active {
    transform: scale(1.1);
}
@keyframes pokeball {
    10% {
        transform: translateY(-10px) rotateZ(360deg);
    }
    20% {
        transform: translateY(0);
    }
}

.pokemon-list-section {
    position: relative;
    height: max-content;
    border-left: 6px solid #ff380c;
    border-right: 6px solid #ff380c;
    background-color: #ff8268;
    z-index: 0;
}
.pokemon-list-section .pikachu-icon {
    position: absolute;
    left: calc(50% - 43px);
    top: -55px;
    z-index: 1;
}
.pokemon-list-section__title {
    padding-top: 50px;
    text-align: center;
    font-size: 1.8rem;
    color: white;
}

.pokemon-list-container {
    height: 985px;
    display: grid;
    justify-content: center;
    grid-template-columns: 140px 140px;
    grid-auto-rows: 189px;
    gap: 10px;
    margin-top: 20px;
}
.pokemon-list-container__info {
    display: grid;
    justify-content: center;
    background-color: #fffffff2;
    border-radius: 15px;
    cursor: pointer;
    transition: all 1s;

    -webkit-tap-highlight-color: rgba(166, 166, 166, 0.311);
    -webkit-box-shadow: 5px 5px 15px -10px rgb(0 0 0 / 70%);
    box-shadow: 5px 5px 15px -10px rgb(0 0 0 / 70%);
}
.pokemon-list-container__info:hover {
    -webkit-box-shadow: 5px 5px 30px -10px rgb(0 0 0 / 70%);
    box-shadow: 5px 5px 30px -10px rgb(0 0 0 / 70%);
}
.pokemon-list-container__info:active {
    transform: scale(0.8);
    -webkit-box-shadow: 5px 5px 30px -10px rgb(0 0 0 / 70%);
    box-shadow: 5px 5px 30px -10px rgb(0 0 0 / 70%);
}
.list-pokemon-img {
    margin: 10px 22px;
    background-color: #cccccc;
    border-radius: 10px;
}
.list-pokemon-id {
    color: #747474;
    font-weight: bold;
    font-size: 1.4rem;
    padding-left: 20px;
}
.list-pokemon-name {
    color: #454545;
    font-size: 1.6rem;
    font-weight: bold;
    padding-left: 20px;
}
.list-pokemon-type {
    display: inline-block;
    color: white;
    font-size: 1.6rem;
    border-radius: 4px;
    padding: 1px 3px;
    margin: 8px 3px;
}
.pokemon-list-section__buttons {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 130px;
    padding-bottom: 60px;
}
.list-pokemon-buttons {
    height: 30px;
    padding: 0 8px;
    margin: 0 10px;
    border: none;
    border-radius: 7px;
    font-weight: bold;
    color: white;
    background-color: #ff380c;
    cursor: pointer;
    transition: all 0.5s;

    -webkit-tap-highlight-color: #e8340c6a;
    -webkit-box-shadow: 5px 5px 15px -10px rgb(0 0 0 / 70%);
    box-shadow: 5px 5px 15px -10px rgb(0 0 0 / 70%);
}
.list-pokemon-buttons:active {
    transform: scale(0.9);
}

.modal-alert-container {
    display: none;
    justify-content: center;
    align-items: center;
    position: fixed;
    height: 100vh;
    top: 0;
    left: 0;
    right: 0;
    background-color: #ff390c53;
    z-index: 1;

    animation-name: modal-on;
    animation-duration: 0.2s;
    animation-iteration-count: 1;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
}
.modal-alert-container__info {
    display: inline-block;
    width: 250px;
    height: 150px;
    text-align: center;
    background-color: white;
    border-radius: 15px;
    box-shadow: rgb(0 0 0 / 70%) 5px 5px 15px -10px;
}
.modal-alert-container__message {
    font-size: 2rem;
    font-weight: bold;
    margin: 0 20px;
    transform: translateY(25px);
}
.modal-alert-container__button {
    height: 40px;
    width: 80px;
    border: none;
    border-radius: 10px;
    background-color: #ff380c;
    color: white;
    font-weight: bold;
    transform: translateY(40px);
}
.modal-alert-container__button:active {
    transform: scale(0.9) translateY(43px);
    transition-duration: 0.1s;
}

.footer-pokedex {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 70px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    font-weight: bold;
    font-size: 1.4rem;
}
.footer-pokedex a {
    display: contents;
    color: white;
}
.footer-pokedex span:nth-child(1) {
    margin-right: 10px;
}
.footer-pokedex__span {
    margin: 0 5px;
}

.grass {
    background-color: var(--grass);
}
.poison {
    background-color: var(--poison);
}
.fire {
    background-color: var(--fire);
}
.water {
    background-color: var(--water);
}
.bug {
    background-color: var(--bug);
}
.flying {
    background-color: var(--flying);
}
.normal {
    background-color: var(--normal);
}
.electric {
    background-color: var(--electric);
    color: rgb(80, 80, 80);
}
.ground {
    background-color: var(--ground);
}
.fairy {
    background-color: var(--fairy);
    color: rgb(80, 80, 80);
}
.fighting {
    background-color: var(--fighting);
}
.psychic {
    background-color: var(--psychic);
}
.rock {
    background-color: var(--rock);
}
.steel {
    background-color: var(--steel);
}
.ice {
    background-color: var(--ice);
}
.ghost {
    background-color: var(--ghost);
}
.dragon {
    background-color: var(--dragon);
}
.dark {
    background-color: var(--dark);
}

